# Intel-8080-Emulator

./: .gitignore  CMakeLists.txt  README.md
config/: HardwareSpecifications.hpp  OpcodeConfig.hpp  OpcodeDetails.hpp  ProcessorConfig.hpp
constants/: OpcodeConstants.hpp  ProcessorConstants.hpp  TimeKeeperConstants.hpp
src/: 8080_emulator.cpp  Intel8080.hpp  Processor.cpp  Processor.executeOneByteInstruction.cpp  Processor.executeThreeByteInstruction.cpp  Processor.executeTwoByteInstruction.cpp  Processor.hpp  main.cpp
src/ArithmeticAndLogicFlags/: ArithmeticAndLogicFlags.hpp
src/BinaryArithmetic/: BinaryArithmetic.cpp  BinaryArithmetic.hpp  BinaryArithmetic.ipp
src/BinaryOperations/: BinaryOperations.cpp  BinaryOperations.hpp  BinaryOperations.ipp
src/Device/: Device.cpp  Device.hpp
src/FindOpcodeDetail/: FindOpcodeDetail.cpp  FindOpcodeDetail.hpp
src/InputDevice/: InputDevice.cpp  InputDevice.hpp
src/OutputDevice/: OutputDevice.cpp  OutputDevice.hpp
src/Processor/: Processor.cpp  Processor.executeOneByteInstruction.cpp  Processor.executeThreeByteInstruction.cpp  Processor.executeTwoByteInstruction.cpp  Processor.hpp
src/ProcessorObserver/: ProcessorObserver.hpp
src/RegisterPair/: RegisterPair.cpp  RegisterPair.hpp
src/Registers/: Registers.hpp
src/TimeKeeper/: TimeKeeper.cpp  TimeKeeper.hpp
src/UnsupportedOpcodeException/: UnsupportedOpcodeException.cpp  UnsupportedOpcodeException.hpp
src/findDeviceByPortNumber/: findDeviceByPortNumber.cpp  findDeviceByPortNumber.hpp
src/findNumberOfBytesUsedByOpcode/: findNumberOfBytesUsedByOpcode.cpp  findNumberOfBytesUsedByOpcode.hpp
src/isDeviceAttachedToPort/: isDeviceAttachedToPort.cpp  isDeviceAttachedToPort.hpp
src/isValuePresentInVector/: isValuePresentInVector.hpp  isValuePresentInVector.ipp
src/startEmulation/: startEmulation.cpp  startEmulation.hpp
src/timeToRunInNanoseconds/: timeToRunInNanoseconds.cpp  timeToRunInNanoseconds.hpp
